--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "react-bootstrap": "^1.4.0",
     "react-codemirror": "^1.0.0",
     "react-codemirror2": "^7.2.1",
-    "react-dom": "16.13.1"
+    "react-dom": "16.13.1",
+    "react-redux": "^7.2.2",
+    "redux": "^4.0.5"
   }
 }
