minor commit: using png file instead of svg file as a favicon

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -9,13 +9,13 @@
   "theme_color": "#2f3e46",
   "icons": [
     {
-      "src": "/projareexp.svg",
+      "src": "/projare.png",
       "sizes": "196x196",
       "type": "image/png",
       "purpose": "any maskable"
     },
     {
-      "src": "/projareexp.svg",
+      "src": "/projare.png",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "any maskable"
